Add instance operation
